Basic layout/form.

--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,14 @@
   </head>
   <body>
     <div class="container">
-      <p>Welcome to your life.</p>
-      <p>This is another paragraph.</p>
+      <h1>Welcome to Coder Rank</h1>
+      <div class="messages">
+      </div>
+      <form>
+        <input type="text" placeholder="User Name" />
+        <input type="text" placeholder="Repo Name"/>
+        <button>Fetch Ranks</button>
+      </form>
     </div>
     <script src="js/bundle.js"></script>
   </body>
