Sending basic stats request.

--- a/app/index.html
+++ b/app/index.html
@@ -13,8 +13,8 @@
       <div class="messages">
       </div>
       <form>
-        <input type="text" placeholder="User Name" />
-        <input type="text" placeholder="Repo Name"/>
+        <input id="user-name" type="text" placeholder="User Name" />
+        <input id="repo-name" type="text" placeholder="Repo Name"/>
         <button>Fetch Ranks</button>
       </form>
     </div>
