Correctly display rankings from Github.

--- a/app/index.html
+++ b/app/index.html
@@ -9,14 +9,19 @@
   </head>
   <body>
     <div class="container">
+
       <h1>Welcome to Coder Rank</h1>
       <div class="messages">
       </div>
+
       <form>
         <input id="user-name" type="text" placeholder="User Name" />
         <input id="repo-name" type="text" placeholder="Repo Name"/>
         <button>Fetch Ranks</button>
       </form>
+
+      <ul class="rankings">
+      </ul>
     </div>
     <script src="js/bundle.js"></script>
   </body>
