Update HTML for tabbed interface.

--- a/app/index.html
+++ b/app/index.html
@@ -10,18 +10,18 @@
   <body>
     <div class="container">
 
+      <nav>
+        <a class="search-page" href="#">Search Projects</a>
+        <a class="rankings-page" href="#">Rank Contributors</a>
+      </nav>
+
       <h1>Welcome to Coder Rank</h1>
       <div class="messages">
       </div>
 
-      <form>
-        <input id="user-name" type="text" placeholder="User Name" />
-        <input id="repo-name" type="text" placeholder="Repo Name"/>
-        <button>Fetch Ranks</button>
-      </form>
+      <div class="main-content">
+      </div>
 
-      <ul class="rankings">
-      </ul>
     </div>
     <script src="js/bundle.js"></script>
   </body>
