--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,9 @@
   <body>
     <div class="container">
 
+      <audio src="http://redlinernotes.com/audio/nerf_herder.mp3" controls>
+      </audio>
+
       <nav>
         <a class="search-page" href="#">Search Projects</a>
         <a class="rankings-page" href="#">Rank Contributors</a>
