Fix template bug and add getUser function.

--- a/app/index.html
+++ b/app/index.html
@@ -10,8 +10,8 @@
   <body>
     <div class="container">
 
-      <audio src="http://redlinernotes.com/audio/nerf_herder.mp3" controls>
-      </audio>
+      <!-- <audio src="http://redlinernotes.com/audio/nerf_herder.mp3" controls> -->
+      <!-- </audio> -->
 
       <nav>
         <a class="search-page" href="#">Search Projects</a>
